<resources>
    <string name="app_name">Drivill Courier</string>
    <string name="splash2">Best Service\nFor Your Product\nDelivery</string>
    <string name="splash3">Drivill Mart\nIs Here For Your\nDaily Necessary</string>
    <string name="splash4">Our Qualified\nRiders Always\nWith You</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="weWillSendYou">We will send you a OTP message</string>
    <string name="login">Login</string>
    <string name="sendOTP">SEND OTP</string>
    <string name="password_txt">Password</string>
    <string name="password_hint">     <font size="12">  Enter Your Password </font></string>
    <string name="enter_email_address_hint">     <font size="12">  Enter Email Address</font></string>
    <string name="enter_mobile_hint">     <font size="12">  Enter Mobile Number</font></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="enter_num">Enter Your Mobile Number</string>
    <string name="enter_num2"><font size="12">Enter Your Mobile Number</font></string>
    <string name="signup">Signup</string>
    <string name="verification">Verification</string>
    <string name="enter_the_otp_sent_to_your_number">Enter the OTP sent to your number</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_name"><font size="12">  Enter your name </font></string>
    <string name="enter_email_business"><font size="12">  Enter your business mail </font></string>
    <string name="enter_address"><font size="12">  Enter House/Road no., Village </font></string>
    <string name="enter_hub_id"><font size="12">  Enter your Hub Id </font></string>
    <string name="address">Address</string>
    <string name="referral_code_optional">Referral Code <font size="12">(optional) </font></string>
    <string name="continue_txt">Continue</string>
    <string name="hub_id">Hub Id</string>
    <string name="personal_information">Personal Information</string>
    <string name="nid_number">NID Number</string>
    <string name="fatherNid_number">Father\'s NID Number</string>
    <string name="plate_number">Plate Number</string>
    <string name="enter_13_digit_nid_number"><font size="12">  Enter 13 digit NID number </font></string>
    <string name="enter_plate_number"><font size="12">  Enter Plate number </font></string>
    <string name="enter_driving_number"><font size="12">  Enter Driving License number </font></string>
    <string name="enter_token_number"><font size="12">  Enter Token number </font></string>
    <string name="father_s_nid_photo">Father\'s NID Photo</string>
    <string name="addjpgImageTxt">Add pdf/jpeg file(s) or take a photo</string>
    <string name="vehicle_information">Vehicle Information</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="cycle">Cycle</string>
    <string name="driving_license_number">Driving License Number</string>
    <string name="driving_license_photo">Driving License Photo</string>
    <string name="registration_photo">Registration Photo</string>
    <string name="motorcycle_s_brand">Motorcycle\'s Brand</string>
    <string name="motorcycle_s_model">Motorcycle\'s Model</string>
    <string name="region">Region</string>
    <string name="category">Category</string>
    <string name="tokenNum">Token Number</string>
    <string name="set_password">Set Password</string>
    <string name="enter_8_character_password">Enter 8 Character Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_must_contain_a_uppercase_and_a_number">Password must contain a uppercase and a number</string>
    <string name="for_registration_with_us">For registration with us</string>
    <string name="thank_you">Thank You</string>
    <string name="youracountprocess">Your account still under review.\nWe\'ll get back to you soon</string>
    <string-array name="brand_array">
        <item><font size="14">Brand Name </font></item>
        <item>Honda</item>
        <item>KTM</item>
        <item>Hero</item>
        <item>RR</item>
    </string-array>
    <string-array name="model_array">
        <item><font size="14">Model Name </font></item>
        <item>Pulser-50</item>
        <item>Discover</item>
        <item>Platina</item>
    </string-array>
    <string-array name="region_array">
        <item>Select Region</item>
        <item>Dhaka Metro</item>
        <item>Indore Metro</item>
        <item>Khuina Metro</item>
    </string-array>
    <string-array name="SelectPType">
        <item><font size="14">Select Product Type </font></item>
        <item>Document</item>
        <item> Heavy Weight</item>
    </string-array>
    <string-array name="SelectWType">
        <item><font size="14">Select Weight</font></item>
        <item>1kg</item>
        <item> 2kg</item>
        <item> 5kg</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_today_s_assign_work">Your assign work</string>
    <string name="have_a_good_day">Have a good day</string>
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="become_a_rider">Become a Rider</string>
    <string name="become_a_seller">Become a Seller</string>
    <string name="become_a_merchant">Become a Merchant</string>
    <string name="map">Map</string>
    <string name="change_status">Change Status</string>
    <string name="details">Details</string>
    <string name="available_cod_amount">Available COD Amount</string>
    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="enable">Enable</string>
    <string name="location">Location</string>
    <string name="disable">Disable</string>
    <string name="supports">Supports</string>
    <string name="contact_us_for_supports_with_your_courier_id_or_account_id">Contact us for supports with your Courier ID or Account ID.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faqs">FAQs</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Log Out</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="are_you_sure_to_transfer">Are you sure transfer this shipment?</string>
    <string name="plse_provide_location">Location permission must required</string>
    <string name="are_you_sure_to_home">Are you sure back to Home?</string>
    <string name="permission">Permission</string>
    <string name="gps_permission">Please enable your GPS</string>
    <string name="logout_or_you_can_move_another_account">Logout or you can move another account</string>
    <string name="next">Next</string>
    <string name="increase_nyour_sales_nwith_us">Increase \nYour Sales \nWith Us</string>
    <string name="skip">Skip</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="order_cancel">Order Cancel</string>
    <string name="transferred">Transferred</string>
    <string name="select_current_status">Select Current Status</string>
    <string name="customer_not_available">Delivery attempt failed</string>
    <string name="merchant_not_available">Merchant\nNot Available</string>
    <string name="resend">Resend</string>
    <string name="din_t_get_otp">Didn\'t get OTP?</string>
    <string name="not_get_yet">Not get message yet?</string>
    <string name="create_rider_account">Create Rider account</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="i_agree_to_drivill_s_terms_of_use_and_i_have_read_nprivacy_policy">I agree to drivill\'s Terms of Use and I have read Privacy Policy</string>
    <string name="submit">Submit</string>
    <string name="quit">Quit Now</string>
    <string name="profile">Profile</string>
    <string name="riding_statements">Riding Statements</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="business_name">Business Name</string>
    <string name="phone">Phone</string>
    <string name="emergency_mobile_number">Emergency Mobile Number</string>
    <string name="payment_method">Payment Method:</string>
    <string name="receive_notifications">Receive notifications</string>
    <string name="camera_access">Camera access</string>
    <string name="cod_to_deposit">COD to Deposit</string>
    <string name="drivill_s_commission">Drivill\'s Commission</string>
    <string name="total_cod_collected">Total COD Collected</string>
    <string name="statements">Statements</string>
    <string name="deposit">Deposit</string>
    <string name="cod_statement">COD Statement</string>
    <string name="select_date">Select Date</string>
    <string name="total_cod_earned">Total COD Earned</string>
    <string name="from_date_to_date">From Date to Date</string>
    <string name="all_cod_collected">All COD Collected</string>
    <string name="cancel">Cancel</string>
    <string name="delivery_to">Delivery To:</string>
    <string name="check_internet">Check Internet Connection</string>
    <string name="all_field_required">All Field Are Required</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="mobile_num_is_invalid">Mobile number is invalid</string>
    <string name="url_is_invalid">Enter valid facebook url</string>
    <string name="enter_mobile_num">Please Enter Mobile Number </string>
    <string name="try_again">Server error try after some time</string>
    <string name="invalid_otp">invalid otp</string>
    <string name="pls_select_gender">Please Select Gender</string>
    <string name="pls_accept_term">Please Accept Terms of Policy</string>
    <string name="nid_photo">NID Photo</string>
    <string name="select_photo">Please Select Photo</string>
    <string name="please_select_pic">Please Select Photo</string>
    <string name="please_enter_mail">Please Enter Mail Id</string>
    <string name="re_enter_password"><font size="12">  Re-Enter Password </font></string>
    <string name="enter_new_password"><font size="12">  Enter new password </font></string>
    <string name="call_merchant">Call Merchant</string>
    <string name="call_customer_service">Call Customer\nService</string>
    <string name="hub">HUB</string>
    <string name="rider">Rider</string>
    <string name="earn_pay"><![CDATA[Earn & Pay]]></string>
    <string name="trucking">Tracking</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="one_the_way">One the way</string>
    <string name="not_received">Not received</string>
    <string name="yes_cancel">Yes,Cancel</string>
    <string name="are_you_realy_want_to_cancel_the_delivery">Are you really want to cancel the delivery</string>
    <string name="help">Help</string>
    <string name="add_bank_details">Add Bank Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_name">BANK NAME</string>
    <string name="account_number">Account Number</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="save">Save</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
</resources>