<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        android:contentDescription="Name"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/deliveredTool"
        android:title="@string/delivered" />
    <item
        android:id="@+id/pendingTool"
        android:title="@string/pending" />
    <item
        android:id="@+id/on_thewayTool"
        android:title="@string/one_the_way" />
    <item
        android:id="@+id/notReceivedTool"
        android:title="@string/not_received" />
</menu>