<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_15sdp"
    android:background="@drawable/backround_top_corner"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_50sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_dialog"
            style="@style/textStyleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_blue"
            android:gravity="center"
            android:text="@string/hub"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/nameText" />

        <TextView
            android:id="@+id/callMerchantTxt"
            style="@style/textStyleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:drawableTop="@drawable/group_call_icon_white"
            android:gravity="center"
            android:text="@string/call_merchant"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/nameText" />


        <TextView
            android:id="@+id/callCustomerTxt"
            style="@style/textStyleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:drawableTop="@drawable/group_call_icon_blue"
            android:gravity="center"
            android:text="@string/call_customer_service"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/nameText" />


        <TextView
            android:id="@+id/rider_dialog"
            style="@style/textStyleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:drawableTop="@drawable/bicycle_rider"
            android:gravity="center"
            android:text="@string/rider"
            android:textColor="@color/black"
            android:textSize="@dimen/nameText" />
    </LinearLayout>

    <TextView
        android:id="@+id/button_continue"
        style="@style/textStyleMedium"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/_60sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/theme_background_button"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/buttonTextSmall" />

</LinearLayout>