<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".merchantModul.activity.Activity_AddBankDetails">

    <RelativeLayout
        android:id="@+id/tlb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white_light"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/forword_arrow" />


        <TextView
            android:id="@+id/titleTxt"
            style="@style/textStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/add_bank_details"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbarTitle" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_below="@+id/tlb"
        android:background="@drawable/background_blue_curve">

        <TextView
            style="@style/textStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/bank_details"
            android:textColor="@color/gary"
            android:textSize="@dimen/hintText" />

        <AutoCompleteTextView
            android:id="@+id/bankname"
            style="@style/textStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backround_input"
            android:hint="@string/bank_name"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:minHeight="46dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="5dp" />

        <AutoCompleteTextView
            android:id="@+id/Acntno"
            style="@style/textStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backround_input"
            android:hint="@string/account_number"
            android:maxLines="2"
            android:inputType="textMultiLine|number"
            android:minHeight="46dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="5dp" />

        <AutoCompleteTextView
            android:id="@+id/holdername"
            style="@style/textStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backround_input"
            android:hint="@string/account_holder_name"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:minHeight="46dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp">

            <AutoCompleteTextView
                android:id="@+id/branchname"
                style="@style/textStyleRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backround_input"
                android:hint="@string/branch_name"
                android:inputType="textMultiLine"
                android:minHeight="46dp"
                android:padding="5dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/SaveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/theme_background_button"
        android:paddingHorizontal="@dimen/_30sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        style="@style/textStyleMedium"
        android:textSize="@dimen/buttonText" />

</RelativeLayout>