<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.drivill.courier.fragment.SetPasswordFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        tools:context=".fragment.SetPasswordFragment">

        <LinearLayout
            android:id="@+id/heding1Signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/textStyleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_password"
                android:textColor="@color/black"
                android:textSize="@dimen/headingText" />

            <TextView
                style="@style/textStyleRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/enter_8_character_password"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/hintText" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:visibility="visible">

            <TextView
                android:id="@+id/text1"
                style="@style/textStyleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="start"
                android:text="@string/new_password"
                android:textColor="@color/black"
                android:textSize="@dimen/hintText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/createPasswordET"
                style="@style/textStyleRegular"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/backround_input"
                android:drawableEnd="@drawable/visibility"
                android:drawablePadding="@dimen/_5sdp"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:paddingHorizontal="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text1" />

            <TextView
                android:id="@+id/mustContain"
                style="@style/textStyleRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/password_must_contain_a_uppercase_and_a_number"
                android:textColor="@color/gary"
                android:textSize="@dimen/hintText"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createPasswordET" />

            <TextView
                android:id="@+id/text2"
                style="@style/textStyleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="@dimen/hintText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mustContain" />


            <EditText
                android:id="@+id/confirmPasswordET"
                style="@style/textStyleRegular"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/backround_input"
                android:drawableEnd="@drawable/visibility"
                android:drawablePadding="@dimen/_5sdp"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:paddingHorizontal="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text2" />

            <TextView
                android:id="@+id/button_Submit"
                style="@style/textStyleMedium"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/theme_background_button"
                android:gravity="center"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/buttonTextSmall"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordET" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>